--- a/companies-app/src/app/companies/companies.component.html
+++ b/companies-app/src/app/companies/companies.component.html
@@ -1,8 +1,13 @@
-<div class="container">
-	<div class="list-group">
-	  <a href="#" class="list-group-item" *ngFor="let co of companies">
-	    <h4 class="list-group-item-heading">{{co.name}}</h4>
-	    <p class="list-group-item-text">{{co.address}}</p>
-	  </a>
-	</div>
+<ul class="nav nav-pills">
+  <li role="presentation" class="active"><a>Companies</a></li>
+  <li role="presentation"><a routerLink="/new">New Company</a></li>
+</ul>
+<br>
+<div class="list-group">
+  <a class="list-group-item" *ngFor="let co of companies" >
+    <h4 class="list-group-item-heading" >{{co.name}}</h4>
+    <p class="list-group-item-text">{{co.address}}</p>
+    <br>
+    <a (click)="viewCompany(co)">View</a>
+  </a>
 </div>
