--- a/companies-app/src/app/app.component.html
+++ b/companies-app/src/app/app.component.html
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Companies App</a>
-    </div>
-  </div>
+<div class="container">
+	<div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">Companies App</a>
+	    </div>
+	  </div>
+	</div>
 </nav>
 <div class="container">
 	<router-outlet></router-outlet>	
