--- a/companies-app/src/app/companies/companies.component.html
+++ b/companies-app/src/app/companies/companies.component.html
@@ -1,7 +1,8 @@
-<ul class="nav nav-pills">
-  <li role="presentation" class="active"><a>Companies</a></li>
-  <li role="presentation"><a routerLink="/new">New Company</a></li>
+
+<ul class="nav navbar-nav navbar-right">
+  <li role="presentation"><a routerLink="/new"> + New Company</a></li>
 </ul>
+<div class="clearfix"></div>
 <br>
 <div class="list-group">
   <a class="list-group-item" *ngFor="let co of companies" >
